site/docs/3.2.2/api/python/_sources/reference/pyspark.pandas/api/pyspark.pandas.DataFrame.rst.txt
..  Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

..    http://www.apache.org/licenses/LICENSE-2.0

..  Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.

.. Workaround to avoid documenting __init__.

pyspark.pandas.DataFrame
========================

.. currentmodule:: pyspark.pandas

.. autoclass:: DataFrame

   


   .. rubric:: Methods

   .. autosummary::
      
      ~DataFrame.abs
      ~DataFrame.add
      ~DataFrame.add_prefix
      ~DataFrame.add_suffix
      ~DataFrame.agg
      ~DataFrame.aggregate
      ~DataFrame.align
      ~DataFrame.all
      ~DataFrame.any
      ~DataFrame.append
      ~DataFrame.apply
      ~DataFrame.applymap
      ~DataFrame.assign
      ~DataFrame.astype
      ~DataFrame.at_time
      ~DataFrame.backfill
      ~DataFrame.between_time
      ~DataFrame.bfill
      ~DataFrame.bool
      ~DataFrame.clip
      ~DataFrame.copy
      ~DataFrame.corr
      ~DataFrame.count
      ~DataFrame.cummax
      ~DataFrame.cummin
      ~DataFrame.cumprod
      ~DataFrame.cumsum
      ~DataFrame.describe
      ~DataFrame.diff
      ~DataFrame.div
      ~DataFrame.divide
      ~DataFrame.dot
      ~DataFrame.drop
      ~DataFrame.drop_duplicates
      ~DataFrame.droplevel
      ~DataFrame.dropna
      ~DataFrame.duplicated
      ~DataFrame.eq
      ~DataFrame.equals
      ~DataFrame.eval
      ~DataFrame.expanding
      ~DataFrame.explode
      ~DataFrame.ffill
      ~DataFrame.fillna
      ~DataFrame.filter
      ~DataFrame.first
      ~DataFrame.first_valid_index
      ~DataFrame.floordiv
      ~DataFrame.from_dict
      ~DataFrame.from_records
      ~DataFrame.ge
      ~DataFrame.get
      ~DataFrame.get_dtype_counts
      ~DataFrame.groupby
      ~DataFrame.gt
      ~DataFrame.head
      ~DataFrame.hist
      ~DataFrame.idxmax
      ~DataFrame.idxmin
      ~DataFrame.info
      ~DataFrame.insert
      ~DataFrame.isin
      ~DataFrame.isna
      ~DataFrame.isnull
      ~DataFrame.items
      ~DataFrame.iteritems
      ~DataFrame.iterrows
      ~DataFrame.itertuples
      ~DataFrame.join
      ~DataFrame.kde
      ~DataFrame.keys
      ~DataFrame.kurt
      ~DataFrame.kurtosis
      ~DataFrame.last
      ~DataFrame.last_valid_index
      ~DataFrame.le
      ~DataFrame.lt
      ~DataFrame.mad
      ~DataFrame.mask
      ~DataFrame.max
      ~DataFrame.mean
      ~DataFrame.median
      ~DataFrame.melt
      ~DataFrame.merge
      ~DataFrame.min
      ~DataFrame.mod
      ~DataFrame.mul
      ~DataFrame.multiply
      ~DataFrame.ne
      ~DataFrame.nlargest
      ~DataFrame.notna
      ~DataFrame.notnull
      ~DataFrame.nsmallest
      ~DataFrame.nunique
      ~DataFrame.pad
      ~DataFrame.pct_change
      ~DataFrame.pipe
      ~DataFrame.pivot
      ~DataFrame.pivot_table
      ~DataFrame.pop
      ~DataFrame.pow
      ~DataFrame.prod
      ~DataFrame.product
      ~DataFrame.quantile
      ~DataFrame.query
      ~DataFrame.radd
      ~DataFrame.rank
      ~DataFrame.rdiv
      ~DataFrame.reindex
      ~DataFrame.reindex_like
      ~DataFrame.rename
      ~DataFrame.rename_axis
      ~DataFrame.replace
      ~DataFrame.reset_index
      ~DataFrame.rfloordiv
      ~DataFrame.rmod
      ~DataFrame.rmul
      ~DataFrame.rolling
      ~DataFrame.round
      ~DataFrame.rpow
      ~DataFrame.rsub
      ~DataFrame.rtruediv
      ~DataFrame.sample
      ~DataFrame.select_dtypes
      ~DataFrame.sem
      ~DataFrame.set_index
      ~DataFrame.shift
      ~DataFrame.skew
      ~DataFrame.sort_index
      ~DataFrame.sort_values
      ~DataFrame.squeeze
      ~DataFrame.stack
      ~DataFrame.std
      ~DataFrame.sub
      ~DataFrame.subtract
      ~DataFrame.sum
      ~DataFrame.swapaxes
      ~DataFrame.swaplevel
      ~DataFrame.tail
      ~DataFrame.take
      ~DataFrame.to_clipboard
      ~DataFrame.to_csv
      ~DataFrame.to_delta
      ~DataFrame.to_dict
      ~DataFrame.to_excel
      ~DataFrame.to_html
      ~DataFrame.to_json
      ~DataFrame.to_latex
      ~DataFrame.to_markdown
      ~DataFrame.to_numpy
      ~DataFrame.to_orc
      ~DataFrame.to_pandas
      ~DataFrame.to_parquet
      ~DataFrame.to_records
      ~DataFrame.to_spark
      ~DataFrame.to_spark_io
      ~DataFrame.to_string
      ~DataFrame.to_table
      ~DataFrame.transform
      ~DataFrame.transpose
      ~DataFrame.truediv
      ~DataFrame.truncate
      ~DataFrame.unstack
      ~DataFrame.update
      ~DataFrame.var
      ~DataFrame.where
      ~DataFrame.xs




   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~DataFrame.T
      ~DataFrame.at
      ~DataFrame.axes
      ~DataFrame.columns
      ~DataFrame.dtypes
      ~DataFrame.empty
      ~DataFrame.iat
      ~DataFrame.iloc
      ~DataFrame.index
      ~DataFrame.loc
      ~DataFrame.ndim
      ~DataFrame.shape
      ~DataFrame.size
      ~DataFrame.style
      ~DataFrame.values
   
   